--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,16 +12,35 @@
     <string name="btn_next_slide">Next</string>
     <string name="btn_skip_slide">Skip</string>
     <string name="start">Start</string>
+    <string name="full_name">Full Name</string>
     <string name="title_activity_signup">Sign in</string>
     <string name="prompt_email">Email</string>
+    <string name="prompt_id">ID</string>
+    <string name="prompt_phone">Phone Number</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_up">Sign Up</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
 
-    <!--    lultiline text items-->
-    <string name="dashboard_text">"Need a plumber, electrician, fumigation services? Or may be you just need a driver to drop your ride to your dad in shagz..? Worry no more. Signup and you can have all this at the touch of a button"</string>
+    <!--    multiline text items-->
+    <string name="dashboard_text">"Need a plumber, electrician, driver, caterer, tailor, fumigation services?"</string>
+    <string name="tagline">"Service at your fingertips"</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 </resources>
