--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Kokwet</string>
+<!--    onboarding screen-->
     <!--    slide titles-->
     <string name="first_slide_title">Search for Service Providers</string>
     <string name="second_slide_title">Pick your Service Provider</string>
@@ -7,11 +8,11 @@
     <!--    slide descriptions-->
     <string name="first_slide_description">Find reputable service providers within your social network.</string>
     <string name="second_slide_description">Sort through the many providers according to reviews and your social network.</string>
-    <string name="third_slide_description">Everyone happy with a job well done!</string>
+    <string name="third_slide_description">Everyone is happy with a job well done!</string>
     <!--    buttons-->
     <string name="btn_next_slide">Next</string>
     <string name="btn_skip_slide">Skip</string>
-    <string name="start">Start</string>
+    <string name="start">Lets Get Started</string>
     <string name="full_name">Full Name</string>
     <string name="title_activity_signup">Sign in</string>
     <string name="prompt_email">Email</string>
@@ -21,7 +22,7 @@
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up">Sign Up</string>
-    <string name="welcome">"Welcome !"</string>
+    <string name="welcome">"Welcome!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
