--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Kokwet</string>
-<!--    onboarding screen-->
+    <!--    onboarding screen-->
     <!--    slide titles-->
     <string name="first_slide_title">Search for Service Providers</string>
     <string name="second_slide_title">Pick your Service Provider</string>
@@ -22,7 +22,7 @@
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="action_sign_up">Sign Up</string>
-    <string name="welcome">"Welcome!"</string>
+    <string name="welcome">"Welcome"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
